# Pruebas_C_plusplus

./: README.md
Proyectos/: main.cpp  simulacion_neuronal.cpp
Proyectos/DeforestationModel/: CMakeLists.txt
Proyectos/DeforestationModel/include/: DeforestationModel.hpp  InteractiveApp.hpp  RasterGrid.hpp  SpectralIndices.hpp
Proyectos/DeforestationModel/output/: banda_nir_2015.asc  banda_nir_2015.asc.aux.xml  banda_red_2015.asc  banda_red_2015.asc.aux.xml  delta_ndvi.asc  delta_ndvi.asc.aux.xml  irda_score.asc  irda_score.asc.aux.xml  ndvi_2015.asc  ndvi_2015.asc.aux.xml  ndvi_2025.asc  ndvi_2025.asc.aux.xml  riesgo_clasificacion.asc  riesgo_clasificacion.asc.aux.xml  sdp.asc  sdp.asc.aux.xml  vhi.asc  vhi.asc.aux.xml
Proyectos/DeforestationModel/src/: DeforestationModel.cpp  InteractiveApp.cpp  RasterGrid.cpp  SpectralIndices.cpp  main.cpp
